--- a/Frontend/src/Components/Navbar/Navbar.css
+++ b/Frontend/src/Components/Navbar/Navbar.css
@@ -182,3 +182,10 @@ font-weight: 600;
     text-transform: uppercase;
     font-weight: 400;
   }
+.comp{
+  display: flex;
+  justify-content: space-between;
+align-items: center;
+gap: 16px;
+
+}
