--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -8,3 +8,11 @@
     
   
   }
+.search{
+  position: absolute;
+  top: 15%; /* Adjust position as needed */
+  left: 1%;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+}
