--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -10,9 +10,13 @@
   }
 .search{
   position: absolute;
-  top: 15%; /* Adjust position as needed */
+  top: 20%; /* Adjust position as needed */
   left: 1%;
   padding: 10px 20px;
   border-radius: 5px;
   text-align: center;
+}
+.search img{
+  width: 50px;
+    height: 50px;
 }
