--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -6,10 +6,13 @@ body{
     width: 300px;
     height: 700px;
     margin-top: 20px;
-    background-color: rgb(232, 230, 230);
-    margin-left: 14px;
+    background-color: rgb(41, 41, 41);
+    margin-left: 28px;
     border-radius: 10px;
     position: relative;
+}
+.fixed{
+    position: fixed;
 }
 @property --angle{
     syntax: "<angle>";
@@ -24,7 +27,7 @@ body{
     top: 50%;
     left: 50%;
     translate:-50% -50%;
-    background-image: conic-gradient(from var(--angle),transparent 60%,blue,red,green,rgb(172, 12, 113),rgb(0, 255, 255),rgb(246, 0, 0));
+    background-image: conic-gradient(from var(--angle),transparent 60%,red,green,yellow,rgb(0, 231, 227),blue);
     z-index: -1; 
         padding: 3px;
     border-radius: 10px;
@@ -81,7 +84,7 @@ font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 410px;
+    margin-left: 650px;
 
 }
 .search-bar input{
@@ -123,6 +126,9 @@ font-weight: 600;
 
 
 }
+.heading h3{
+    color: white;
+}
 .gamelist{
     display: flex;
     align-items: center;
@@ -155,5 +161,66 @@ p{
 }
 .number:hover{
 border: 2px solid rgb(0, 47, 255);    
-background-color:  rgb(216, 216, 216);
+background-color:  rgb(229, 228, 228);
+}
+.items{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: bisque;
+    width: 1300px;
+    height: 634px;
+    position: absolute;
+    margin-left: 330px;
+    margin-top: 90px;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.item1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 590px;
+    width: 310px;
+margin-bottom: 30px;
+font-size: 20px;
+margin-top: 30px;
+
+}
+.item1 img{
+    height: 460px;
+    width: 310px;
+    object-fit: cover;
+    border-radius: 10px;
+    opacity: 0.3 ease ;
+}
+.item1 img:hover{
+    opacity: 0.7;
+}
+.price{
+    display: flex;
+
+}
+.footer1
+{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-right: 20px;
+}
+.oldprice{
+    text-decoration-line: line-through;
+    opacity: 0.5;
+}
+.offer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 78px;
+    height: 40px;
+    background-color: rgb(0, 212, 245);
+    color: #000;
+    font-size: 23px;
+    border-radius: 28px;
 }
