--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -15,9 +15,13 @@
   padding: 10px 20px;
   border-radius: 5px;
   text-align: center;
+  transition: opacity 0.3s ease;
 }
 .search img{
   width: 50px;
     height: 50px;
 }
 
+.search.hidden{
+  display: none;
+}
