--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -27,7 +27,7 @@ body{
     top: 50%;
     left: 50%;
     translate:-50% -50%;
-    background-image: conic-gradient(from var(--angle),transparent 60%,red,green,yellow,rgb(0, 231, 227),blue);
+    background-image: conic-gradient(from var(--angle),transparent 60%,red,rgb(19, 130, 19),rgb(98, 255, 242),blue);
     z-index: -1; 
         padding: 3px;
     border-radius: 10px;
@@ -168,7 +168,7 @@ background-color:  rgb(229, 228, 228);
     align-items: center;
     justify-content: center;
     color: bisque;
-    width: 1300px;
+    width: 1310px;
     height: 634px;
     position: absolute;
     margin-left: 330px;
@@ -181,8 +181,8 @@ background-color:  rgb(229, 228, 228);
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 580px;
-    width: 300px;
+    height: 650px;
+    width: 280px;
 margin-bottom: 30px;
 font-size: 20px;
 margin-top: 30px;
@@ -190,8 +190,8 @@ cursor: pointer;
 
 }
 .item1 img{
-    height: 450px;
-    width: 300px;
+    height: 400px;
+    width: 280px;
     object-fit: cover;
     border-radius: 10px;
     opacity: 0.3 ease ;
@@ -201,14 +201,15 @@ cursor: pointer;
 }
 .price{
     display: flex;
+    margin-left: 10px;
 
 }
 .footer1
 {
     display: flex;
     align-items: center;
-    justify-content: start;
-    margin-right: 20px;
+    justify-content: space-between;
+    margin-right: 0px;
 }
 .oldprice{
     text-decoration-line: line-through;
@@ -218,10 +219,14 @@ cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 78px;
+    width: 74px;
     height: 40px;
     background-color: rgb(0, 212, 245);
     color: #000;
-    font-size: 23px;
+    font-size: 20px;
     border-radius: 28px;
+}
+.setting{
+    margin-left: 1400px;
+    position: absolute;
 }
