--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -4,7 +4,7 @@ body{
 }
 .games {
     width: 300px;
-    height: 700px;
+    height: 740px;
     margin-top: 20px;
     background-color: rgb(41, 41, 41);
     margin-left: 28px;
@@ -122,7 +122,7 @@ font-weight: 600;
     font-weight: 600;
     font-family: monospace;
     font-size: 25px;
-    padding: 15px;
+    padding: 10px;
 
 
 }
@@ -148,7 +148,7 @@ p{
 }
 
 .number{
-    background-color: rgb(186, 186, 186);
+    background-color: rgb(232, 232, 232);
     margin-bottom: 15px;
     width: 200px;
     border-radius: 9px;
@@ -156,12 +156,14 @@ p{
     align-items: center;
     justify-content: center;
     height: 50px;
+    font-size: 22px;
+    font-family: monospace;
 
 
 }
 .number:hover{
-border: 2px solid rgb(0, 47, 255);    
-background-color:  rgb(229, 228, 228);
+border: 4px solid rgb(8, 0, 250);    
+background-color:  rgb(237, 237, 237);
 }
 .items{
     display: flex;
@@ -169,7 +171,7 @@ background-color:  rgb(229, 228, 228);
     justify-content: center;
     color: bisque;
     width: 1310px;
-    height: 634px;
+    height: 600px;
     position: absolute;
     margin-left: 330px;
     margin-top: 90px;
@@ -181,7 +183,7 @@ background-color:  rgb(229, 228, 228);
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 650px;
+    height: 600px;
     width: 280px;
 margin-bottom: 30px;
 font-size: 20px;
