--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -4,11 +4,12 @@ body{
 }
 .games {
     width: 300px;
-    height: 740px;
+    height: 650px;
     margin-top: 20px;
     background-color: rgb(41, 41, 41);
     margin-left: 28px;
     border-radius: 10px;
+    margin-top:80px;
     position: relative;
 }
 .fixed{
@@ -115,7 +116,7 @@ font-weight: 600;
     padding-left: 20px;
   }
 
-.heading{
+.heading1{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,12 +124,12 @@ font-weight: 600;
     font-family: monospace;
     font-size: 25px;
     padding: 10px;
-
-
-}
-.heading h3{
     color: white;
+
+
+
 }
+
 .gamelist{
     display: flex;
     align-items: center;
@@ -150,20 +151,21 @@ p{
 .number{
     background-color: rgb(232, 232, 232);
     margin-bottom: 15px;
-    width: 200px;
+    width: 185px;
     border-radius: 9px;
     display: flex;
+    color: #000;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    font-size: 22px;
+    height: 40px;
+    font-size: 20px;
     font-family: monospace;
 
 
 }
 .number:hover{
-border: 4px solid rgb(8, 0, 250);    
-background-color:  rgb(237, 237, 237);
+border: 1.5px solid rgb(8, 0, 250);    
+background-color:  rgb(222, 220, 220);
 }
 .items{
     display: flex;
@@ -192,7 +194,7 @@ cursor: pointer;
 
 }
 .item1 img{
-    height: 400px;
+    height: 430px;
     width: 280px;
     object-fit: cover;
     border-radius: 10px;
@@ -242,5 +244,16 @@ padding-top: 8px;
 padding-left: 1px;
 font-family:sans-serif;
 
+
+}
+.heading2{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-family: monospace;
+    font-size: 25px;
+margin-bottom: 30px;
 
 }
