--- a/Frontend/src/Components/SystemReq/SystemReq.css
+++ b/Frontend/src/Components/SystemReq/SystemReq.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     justify-content: center;
 width: 800px;
-height: 1000px;
+height: 900px;
 background-color: rgb(23, 23, 23);
 border-radius: 12px;
 }
@@ -22,14 +22,14 @@ border-radius: 12px;
 }
 .system-left{
     width: 500px;
-    height: 1000px;
+    height: 900px;
     display: flex;
     flex-direction: column;
     
 }
 .system-right{
     width: 500px;
-    height: 1000px;
+    height: 900px;
     flex-direction: column;
 
     display: flex;
@@ -41,11 +41,15 @@ border-radius: 12px;
     color: white;
     font-size: 20px;
     font-weight: bold;
-    padding: 10px;
+    padding: 20px;
 }
 .system-sp{
     font-size: 21px;
     font-weight: 600;
     opacity: 0.4;
+    padding-bottom: 10px;
 
+}
+.system-os{
+    padding-bottom: 10px;
 }
