--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -2,6 +2,7 @@ body{
    
     cursor: url("../Asserts/cursor.png"), auto;
 }
+
 .games {
     width: 300px;
     height: 650px;
@@ -77,6 +78,10 @@ font-weight: 600;
 .slider{
     display: flex;
     align-items: start;
+    width: 100%;
+    height: 400vh;
+    margin-bottom: 50px;
+   
 
 }
 .search-bar{
