--- a/Frontend/src/Components/Slider/Slider.css
+++ b/Frontend/src/Components/Slider/Slider.css
@@ -12,9 +12,10 @@ body{
     border-radius: 10px;
     margin-top:80px;
     position: relative;
+    
 }
 .fixed{
-    position: fixed;
+    position: sticky;
 }
 @property --angle{
     syntax: "<angle>";
@@ -79,7 +80,7 @@ font-weight: 600;
     display: flex;
     align-items: start;
     width: 100%;
-    height: 400vh;
+    height: 1250px;
     margin-bottom: 50px;
    
 
@@ -90,7 +91,7 @@ font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left:43%;
+    margin-left:25%;
 
 }
 .search-bar input{
@@ -172,42 +173,66 @@ p{
 border: 1.5px solid rgb(8, 0, 250);    
 background-color:  rgb(222, 220, 220);
 }
-.items{
-    display: flex;
-    align-items: center;
+.items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);  
+    align-items: start;  
     justify-content: center;
     color: bisque;
-    width: 1310px;
-    height: 600px;
+    width: 1500px;
+    height: 1200px;
     position: absolute;
     margin-left: 330px;
     margin-top: 90px;
-    flex-wrap: wrap;
-    gap: 40px;
+    overflow: auto;
+    padding: 30px; 
+    scrollbar-width: none;
+    scroll-behavior: smooth;
 }
-.item1{
+
+
+.item1 {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 600px;
-    width: 280px;
-margin-bottom: 30px;
-font-size: 20px;
-margin-top: 30px;
-cursor: pointer;
-
+    height: 630px;  
+    width: 300px;  
+    font-size: 20px;
+    cursor: pointer;
 }
-.item1 img{
-    height: 430px;
-    width: 280px;
+
+.item1 img {
+    height: 450px;  
+    width: 300px;  
     object-fit: cover;
     border-radius: 10px;
-    opacity: 0.3 ease ;
 }
-.item1 img:hover{
+.itemSize
+{
+    width: 280px;
+    padding: 0px;
+    margin: 0px;
+
+}
+
+.item1 img:hover {
     opacity: 0.7;
 }
+
+
+@media (max-width: 1200px) {
+    .items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .items {
+        grid-template-columns: 1fr;
+    }
+}
+
 .price{
     display: flex;
     margin-left: 10px;
