--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -28,18 +28,44 @@ body{
 .search.hidden{
   display: none;
 }
-.home-title 
-{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.home-title h2{
-  top: 30%;
+.home-title-pos{
+  top: 20%;
   left: 5%;
   position: absolute;
-  color: white;
 }
+.home-title 
+{
+  display: inline-block;
+}
+.home-title h2{
+  background-image: linear-gradient(rgb(0, 255, 247),rgb(77, 187, 103), rgb(211, 75, 166),rgb(255, 3, 247));
+    color: transparent;
+    background-clip: text;
+}
+
+
+.text{
+  font-size: 2.3em;
+  letter-spacing: 10px;
+  border-right: 5px solid;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: 
+  typing 2s steps(22),
+  cursor .4s step-end infinite alternate;
+
+}
+@keyframes cursor {
+  50% {border-color: transparent}
+  
+}
+@keyframes typing {
+  from {width: 0}
+  
+}
+
+
 
 .shop-now {
   position: absolute;
