--- a/Frontend/src/Components/Cart/Cart.css
+++ b/Frontend/src/Components/Cart/Cart.css
@@ -231,3 +231,89 @@
     font-size: 16px;
   }
   
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: white;
+  border-radius: 16px;
+  border: none;
+  border: 2px solid rgb(0, 34, 255);
+  width: 500px;
+  height: 700px;
+  padding: 20px;
+  text-align: center;
+}
+
+
+.cancelns img{
+  margin-left: 400px;
+  width: 40px;
+  height: 40px;
+}
+.contact-right{
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+
+}
+.contact-right label{
+color: white;
+font-size: 22px;
+font-weight: 500;
+}
+.contact-right input{
+  border: none;
+  width: 430px;
+  height: 55px;
+  padding-left: 20px;
+  border-radius: 8px;
+  background: #444444;
+  color: #a0a0a0;
+  font-family:monospace;
+  font-size: 22px;
+
+}
+.payment{
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  font-size: 25px;
+  background-color: aquamarine;
+  color: #000;
+  height: 45px;
+  border: 2px solid black;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 170px;
+  border: none;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+.payment-btn img{
+  margin-left: 180px;
+  margin-top: 25px;
+  width: 75px;
+  height: 75px;
+  cursor: pointer;
+}
+.payment1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 75px;
+
+}
