--- a/Frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/Frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -3,6 +3,11 @@
     box-sizing: border-box;
 
 }
+.innerDisplay{
+
+    background-color: rgb(30, 33, 31);
+}
+
 .inner-display-img img{
     width: 900px;
     height: 500px;
