--- a/Frontend/src/Components/Navbar/Navbar.css
+++ b/Frontend/src/Components/Navbar/Navbar.css
@@ -10,15 +10,21 @@
   
   a {
     text-decoration: none;
-    color: inherit;
+  }
+  .setting img{
+    position: relative;
+    right: 1%;
   }
   
   .all {
     display: flex;
+   position: absolute;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    z-index: 10;
     padding: 15px 8%;
-    background-color: #2d2d2d;
+    background-color: transparent;
     font-size: 18px;
     /* font-family: monospace; */
 
@@ -27,7 +33,6 @@
   .all ul {
     padding: 10px 30px;
     border-radius: 30px;
-    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
 
   }
   
@@ -35,8 +40,12 @@
     display: inline-block;
     padding: 5px 10px;
     margin: 0 10px;
-    color: #ffffcc;
-    text-shadow: 0 0 5px #fff,
+    color: #ffffff;
+    font-family: monospace;
+   font-size: 23px;
+   font-weight: 500;
+
+    
     
 
       
@@ -65,18 +74,15 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 8%;
-  background-color: #000000;
   font-size: 16px;
 }
 #nav-list{
-    background-color: #333633;
-    border: 2px solid rgb(13, 0, 255);
+  background-color: transparent;
 }
 
 .alg ul {
   padding: 10px 30px;
   border-radius: 30px;
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
 }
 
 .all ul li{
@@ -124,7 +130,10 @@
   }
   .title{
     display: flex;
-    flex-direction: row;
+    position: relative;
+    left: -8%;
+     gap: 15px;
+    flex-direction:row;
     align-items: center;
     justify-content: space-between;
 
@@ -178,8 +187,6 @@ font-weight: 600;
   
   body {
     font-size: 18px;
-    /* font-family: "Helvetica Neue", sans-serif; */
-    background-color: #010a01;
     cursor: url("../Asserts/cursor.png"), auto;
 
   }  
