--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -1,24 +1,22 @@
 body{
   cursor: url("../../Components/Asserts//cursor.png"), auto;
 }
-.vanta-container{
-    height: 100vh; /* Full viewport height */
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    background-color: 0x27142;
-    color:aqua;
-    
-  
-  }
-.search{
-  position: absolute;
-  top: 15%; /* Adjust position as needed */
-  left: 1%;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-align: center;
-  transition: opacity 0.3s ease;
+
+.bg-image{
+  width: 100%;
+  height: 100%;
+
+}
+.bg-video1{
+
+  width: 100%; 
+}
+.video-background
+{
+  width: 100%;
+  height: 1000px;
+  object-fit: cover;
+
 }
 .search img{
   width: 50px;
@@ -30,7 +28,7 @@ body{
 }
 .home-title-pos{
   top: 20%;
-  left: 5%;
+  left: 5%; 
   position: absolute;
 }
 .home-title 
@@ -38,6 +36,7 @@ body{
   display: inline-block;
 }
 .home-title h2{
+  display:none;
   background-image: linear-gradient(rgb(0, 255, 247),rgb(77, 187, 103), rgb(211, 75, 166),rgb(255, 3, 247));
     color: transparent;
     background-clip: text;
@@ -68,9 +67,10 @@ body{
 
 
 .shop-now {
-  position: fixed;
+  position: absolute;
   top: 13%;
   right: 0.5%;
+  margin-bottom: 2000px;
   transition: 0.5s;
 }
 .shop-now p {
@@ -80,8 +80,8 @@ body{
   box-sizing: border-box;
   height: 50px;
   width: 144px;
-  border: 2px solid black;
-  background-image: linear-gradient(to right, rgb(190, 9, 175), rgb(35, 185, 152));
+  border: 1px solid black;
+  background-image: linear-gradient(to right, rgb(106, 0, 244), rgb(35, 185, 152));
   border-radius: 12px;
   font-weight: 500;
   font-family: monospace;
@@ -158,7 +158,7 @@ body{
   padding: 20px 30px;
   background-color: white;
   color: #000;
-  position: relative;
+  position:relative;
   font-size: 17px;
   border-radius: 6px;
   max-width: 100%; 
@@ -267,7 +267,7 @@ body{
 }
 .all-timeline1{
   position: relative;
-  background-color: rgb(98, 102, 98);
+  background-color: rgb(121, 187, 187);
   z-index: 1;
 
 }
