--- a/Admin/Component/Display/Display.css
+++ b/Admin/Component/Display/Display.css
@@ -2,22 +2,18 @@
     display: flex;
     flex-direction:column;
     align-items: center;
-    width: 100%;
     height: 100%;
-    width: 100%;
-    padding:10px 50px;
-    margin: 30px;
+    width:90%;
     border-radius: 6px;
     background: white;
     gap: 50px;
-    padding: 30px;
   
     
 
 }
 .list-all-product{
     display: flex;
-    width: 1500px;
+    width: 1300px;
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
@@ -25,7 +21,7 @@
 }
 .listproduct-format-main{
  display: grid;
- grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr 1fr;
+ grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  gap: 50px;
  width: 99%;
  padding: 20px 0px;
@@ -44,8 +40,9 @@ border-radius: 6px;
 
 }
 .listproduct-icon{
-    width: 300px;
-    height: 180px;
+    width: 350px;
+    height: 200px;
+    object-fit: cover;
     padding-left: 9px;
     border-radius: 3px;
 
@@ -59,4 +56,7 @@ border-radius: 6px;
 }
 .list-all-product{
     overflow: auto;
+}
+.listproduct{
+    width: 100%;
 }
