--- a/Admin/Component/Navbar/Navbar.css
+++ b/Admin/Component/Navbar/Navbar.css
@@ -2,12 +2,14 @@
 .control-panel{
     margin: 0;
     margin-top: 80px;
+    padding: 40px;
 }
 .adminimg{
     height: 60px;
     width: 60px;
     position: absolute;
-    right: 1rem;
+    left: 95%;
+    top: 5%;
 }
 .navAdmin{
     display: flex;
@@ -19,12 +21,7 @@
 
    
 }
-.adminimg{
-    position: absolute;
-    top: 30px;
-    right: 1rem;
 
-}
 .admintext{
     position: absolute;
     top: 10px;
